--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -16,10 +16,10 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
-        "./deep/deeper/bar.ts",
-        "./deep/foo.ts",
         "./index.ts",
         "./typings/node/node.d.ts",
-        "./typings/tsd.d.ts"
+        "./typings/tsd.d.ts",
+
+        "./src/otserv.ts"
     ]
 }
