--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "js/index.js",
   "typings": "js/index",
   "scripts": {
-    "start": "node ./js/index.js"
+    "build": "tsc -p ./ts",
+    "start": "node ./js/index.js",
+    "buildstart": "npm run build && concurrently \"tsc -w\" \"npm run start\" "
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/Mkalo/typescript-otserver/issues"
   },
-  "homepage": "https://github.com/Mkalo/typescript-otserver#readme"
+  "homepage": "https://github.com/Mkalo/typescript-otserver#readme",
+  "devDependencies": {
+    "concurrently": "^3.3.0",
+    "typescript": "^2.1.6",
+    "typings": "^2.1.0"
+  }
 }
