Added XTEA encryption, type conversions and NetworkMessage implementation.

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -20,6 +20,9 @@
         "./index.ts",
 
         "./src/otserv.ts",
-        "./src/rsa.ts"
+        "./src/rsa.ts",
+        "./src/ctypes.ts",
+        "./src/networkmessage.ts",
+        "./src/xtea.ts"
     ]
 }
