--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.5.0-alpha",
+    "version": "2.1.6",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
