--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "node2",
             "request": "launch",
             "name": "Launch Program",
-            "preLaunchTask": "tsc",
+            "preLaunchTask": "tsc-watch",
             "program": "${workspaceRoot}/bin/index.js",
             "cwd": "${workspaceRoot}"
         },
