--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-	"files.exclude": {
-		"node_modules/": true,
-		".vscode": true,
-		"bin": true
+	"files": {
+		"exclude": {
+			"node_modules/": true,
+			".vscode": true,
+			"bin": true,
+			"LICENSE": true
+		}
 	},
 
 	"editor": {
