--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
-    "compilerOptions": {
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "module": "commonjs",
-        "target": "ES5",
-        "outDir": "bin",
-        "rootDir": "src",
-        "sourceMap": true
-    } ,
-    "exclude": [
-        "node_modules"
-    ]
+	"compilerOptions": {
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"module": "commonjs",
+		"target": "ES5",
+		"outDir": "bin",
+		"rootDir": ".",
+		"sourceMap": true,
+		"allowJs": true
+	},
+	"exclude": [
+		"node_modules",
+		"bin"
+	]
 }
