Added sample config

--- a/config.js.sample
+++ b/config.js.sample
@@ -1,5 +1,22 @@
 const config = {
-
+	world: {
+		type: "pvp", // "pvp", "no-pvp" and "pvp-enforced"
+		name: "Typescripten",
+		motd: "Hello from the other side. xP"
+	},
+	connection: {
+		ip: "127.0.0.1",
+		loginPort: 7171,
+		gamePort: 7172
+	},
+	db: {
+		type: "mysql",
+		host: '127.0.0.1',
+		port: '3306',
+		user: 'root',
+		password: '',
+		dbName: ''
+	}
 };
 
 export default config;
