--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   },
   "homepage": "https://github.com/Mkalo/typescript-otserver#readme",
   "devDependencies": {
-    "concurrently": "^3.3.0",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0"
+    "typescript": "^2.2.1"
   },
   "dependencies": {
     "@types/node": "^7.0.5",
