--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "js/index",
   "scripts": {
     "build": "tsc",
+	"watch": "tsc -w",
     "start": "node ./bin/src",
     "buildstart": "npm run build & npm start"
   },
