port should be a number by default

--- a/config.js.sample
+++ b/config.js.sample
@@ -12,7 +12,7 @@ const config = {
 	db: {
 		type: "mysql",
 		host: '127.0.0.1',
-		port: '3306',
+		port: 3306,
 		user: 'root',
 		password: '',
 		dbName: ''
