--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"module": "commonjs",
-		"target": "ES5",
+		"target": "es6",
 		"outDir": "bin",
 		"rootDir": ".",
 		"sourceMap": true,
