--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/node": "^7.0.5",
     "big-integer": "^1.6.17",
     "node-rsa": "^0.4.2",
-    "xml2json": "^0.11.0"
+    "xml2json": "^0.11.0",
     "deep-extend": "^0.4.1"
   }
 }
