--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,18 @@
+sudo: required
 language: node_js
+env:
+  - CXX="g++-4.8"
 
 node_js:
   - 'stable'
 
-sudo: false
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+    - gcc-4.8
 
 branches:
   only:
