--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "start": "node ./bin/src",
     "buildstart": "npm run build && npm start",
-	"pretest": "tsc --baseUrl test",
+    "pretest": "tsc --baseUrl test",
     "test": "mocha \"bin/test/*.js\""
   },
   "repository": {
@@ -35,8 +35,9 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "big-integer": "^1.6.17",
+    "deep-extend": "^0.4.1",
     "node-rsa": "^0.4.2",
-    "xml2json": "^0.11.0",
-    "deep-extend": "^0.4.1"
+    "protobufjs": "^6.6.3",
+    "xml2json": "^0.11.0"
   }
 }
