--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,17 @@
 	"editor": {
 		"detectIndentation": false,
 		"tabSize": 4
+	},
+
+	"typescript": {
+		"format": {
+			"insertSpaceAfterFunctionKeywordForAnonymousFunctions": false
+		}
+	},
+
+	"javascript": {
+		"format": {
+			"insertSpaceAfterFunctionKeywordForAnonymousFunctions": false
+		}
 	}
 }
