--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
   "dependencies": {
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
+    "bcrypt": "^1.0.2",
     "bignum": "^0.12.5",
     "deep-extend": "^0.4.1",
     "ip": "^1.1.4",
+    "moment": "^2.17.1",
+    "mongoose": "^4.8.5",
     "node-rsa": "^0.4.2",
+    "validator": "^7.0.0",
     "xml2json": "^0.11.0"
   }
 }
