--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
+    "async": "^2.4.0",
     "bcrypt": "^1.0.2",
     "bignum": "^0.12.5",
     "deep-extend": "^0.4.1",
