--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.17.1",
     "mongoose": "^4.8.5",
     "node-rsa": "^0.4.2",
+    "shuffle-array": "^1.0.1",
     "validator": "^7.0.0",
     "xml2json": "^0.11.0"
   }
