--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^4.8.5",
     "node-rsa": "^0.4.2",
     "shuffle-array": "^1.0.1",
+    "tstl": "^1.4.11",
     "validator": "^7.0.0",
     "xml2json": "^0.11.0"
   }
